# Real-vibecode

./: .gitignore  HANDOVER.md  LICENSE.txt  README.md  ThirdPartyNotices.txt  electron-builder.yml  package.json  product.json
.github/workflows/: build-release.yml  release.yml
agent-ctx/: execution-progress-and-error-handler-main.md  rollback-engine-implementation.md
cli/: Cargo.toml
cli/src/: constants.rs  main.rs
cli/src/commands/: chat.rs  mod.rs  models.rs  run.rs
docs/: CUSTOMIZATION-GUIDE.md  accessibility-remediation.md  accessibility-report.md  component-library.md  css-token-pipeline.md  design-token-system.md  icon-rendering-system.md  iconography-guidelines.md  interaction-implementation.md  performance-cleanup.md  product-audit.md  product-surface-redesign.md  professional-ui-system.md  reality-report.md  rendered-surface-rebuild.md  rendering-performance.md  ui-standardization.md  ux-reduction-plan.md  ux-reduction-results.md
docs/architecture/: SYSTEM-WALKAROUND.md  agent-recovery.md  agent-runtime.md  ai-context-engine.md  ai-execution-kernel-phase1.md  approval-system.md  architectural-consolidation.md  backpressure-system.md  boot-sequence.md  branding-migration.md  capability-system.md  causal-linking.md  conflict-resolution-engine.md  context-merger.md  cross-layer-failure-testing.md  cross-layer-signal-bus.md  cross-phase-integration.md  dependency-analysis.md  dependency-graph.md  deterministic-replay.md  di-system-audit.md  end-to-end-runtime.md  event-storm-simulation.md  (+46 more)
scripts/: build-desktop.sh  prepare-vscode.sh  web-server.mjs
(+341 files in other folders)
